# Movie-recommendation-system

./: .gitignore  README.md  benchmark.py  pyproject.toml  recommend.py  requirements.txt  train.py  web.py
scripts/: benchmark.py
src/movie_recsys/: __init__.py  collaborative.py  data.py  evaluate.py  hybrid.py  metrics.py  recommend.py  supervised.py  svdpp.py  train.py  web_app.py
src/movie_recsys/templates/: index.html
tests/: conftest.py  test_metrics.py
