[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "movie-recsys"
version = "0.1.0"
description = "Hybrid movie recommendation system (CF + supervised) on MovieLens 100K"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "requests>=2.31",
    "tqdm>=4.66",
]

[tool.setuptools.packages.find]
where = ["src"]
